[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/GameNode.gd" type="Script" id=1]
[ext_resource path="res://Cesta.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonte.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Menu Bot達o.png" type="Texture" id=5]
[ext_resource path="res://Ch達o.png" type="Texture" id=6]
[ext_resource path="res://Tabela.png" type="Texture" id=7]
[ext_resource path="res://TYPE.png" type="Texture" id=8]
[ext_resource path="res://Fundo.png" type="Texture" id=9]
[ext_resource path="res://Sons/Pontos.wav" type="AudioStream" id=10]
[ext_resource path="res://Sons/Cair chao.wav" type="AudioStream" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 1.06335, 822.354 )
b = Vector2( 3.33545, -66.0269 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -1.20868, 815.537 )
b = Vector2( 3.33545, -29.6737 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 454.827, -0.658081 )
b = Vector2( -37.5619, -0.13678 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 62.4179, -0.721619 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 12.792, 0.016571 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 18.1898, 43.0706 )
b = Vector2( -1.9285, 2.83408 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -16.142, 41.5231 )
b = Vector2( -1.44022, 0.512695 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 441.355, 1.93719 )
b = Vector2( 12.6811, 0.389709 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 6.49449, 4.02142 )
b = Vector2( -20.952, 4.27795 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Cesta" type="Sprite" parent="."]
position = Vector2( 223.564, 260.302 )
scale = Vector2( 0.0967896, 0.0967896 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 447.598, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.397, 816.217 )
shape = SubResource( 3 )

[node name="Sextabaixo" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 196.216, 359.46 )
shape = SubResource( 4 )

[node name="Sextacima" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 180.015, 294.912 )
shape = SubResource( 5 )

[node name="Sextacima2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 258.254, 298.273 )
shape = SubResource( 5 )

[node name="Sextalado1" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 183.368, 307.709 )
shape = SubResource( 6 )

[node name="Sextalado2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 272.493, 310.311 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="baixo" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2( 0, 799.77 )
shape = SubResource( 8 )

[node name="placar" type="Node2D" parent="."]
z_index = -3

[node name="Control" type="Control" parent="placar"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="placar/Control"]
margin_left = 185.462
margin_top = 70.6526
margin_right = 328.462
margin_bottom = 263.653
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="placar2" type="Node2D" parent="."]
z_index = -3

[node name="Control2" type="Control" parent="placar2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="placar2/Control2"]
margin_left = 4.11575
margin_top = 5.72982
margin_right = 1068.12
margin_bottom = 198.73
rect_scale = Vector2( 0.1, 0.11 )
custom_fonts/font = ExtResource( 3 )
text = "Highscore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ponto" type="Area2D" parent="."]

[node name="Reset" type="CollisionShape2D" parent="Ponto"]
position = Vector2( 237.116, 337.981 )
shape = SubResource( 9 )

[node name="Menu" type="Button" parent="."]
margin_left = 401.895
margin_top = 2.05265
margin_right = 635.895
margin_bottom = 232.053
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 3 )
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu Bot達o" type="Sprite" parent="Menu"]
position = Vector2( 119.057, 112.996 )
scale = Vector2( 0.665493, 0.550605 )
texture = ExtResource( 5 )

[node name="Ch達o" type="Sprite" parent="."]
position = Vector2( 228.297, 764.384 )
scale = Vector2( 0.0673262, 0.0673262 )
texture = ExtResource( 6 )

[node name="Tabela" type="Sprite" parent="."]
position = Vector2( 228.216, 255.273 )
scale = Vector2( 0.0925075, 0.0925075 )
texture = ExtResource( 7 )

[node name="Cesta1" type="Sprite" parent="Tabela"]
position = Vector2( -2.13867, 768.1 )
z_index = 1
texture = ExtResource( 2 )

[node name="TYPE" type="Sprite" parent="."]
position = Vector2( 137.038, 322.09 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 224.904, 404.887 )
scale = Vector2( 0.241079, 0.241079 )
z_index = -5
texture = ExtResource( 9 )

[node name="Caiu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Pontos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Ponto" to="." method="_on_Ponto_body_entered"]
[connection signal="pressed" from="Menu" to="Menu" method="_on_Menu_pressed"]
